--- a/yatzi.css
+++ b/yatzi.css
@@ -12,6 +12,9 @@ body{
 
 h1{
     font-family: arial, sans-serif;
+    animation-duration: 4s;
+    animation-name: slidein;
+    
 }
 
 
@@ -53,17 +56,14 @@ td {
     margin: 0;
 }
 
-h1{
-    animation-duration: 4s;
-    animation-name: slidein;
-    
 
-}
+
 
 @keyframes slidein {
     from {
       margin-left: 100%;
       width: 200%; 
+
     }
   
     to {
@@ -77,7 +77,8 @@ h1{
   
   .zoom:hover {
     transform: scale(1.5);
-    background-color: green;
+    background-color:grey
+    
     
   }
 
