--- a/yatzi.css
+++ b/yatzi.css
@@ -18,11 +18,11 @@ table, td, tr {
     border: 2px solid black;
 }
 input {
-    width: 60px;
-    height: 50px;
+    width: 35px;
+    height: 12px;
     border: none;
     margin: 0;
-    height: 100%;
+    height: 25%;
     text-align: center;
 }
 td {
@@ -101,5 +101,15 @@ button {
     font-size: 16px;
     border: 2px solid black;
 }
+.check {
 
+    border: none;
+    color: white;
+    padding: 10px, 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    width: 29px;
+}
 
